--- a/app/views/polls/_new.html.haml
+++ b/app/views/polls/_new.html.haml
@@ -1,6 +1,9 @@
-= simple_form_for(@poll, url: root_path, remote: true, defaults: {label: false}, 
-                         html: {novalidate: 'novalidate', autocomplete: "off" }) do |form|
-  = form.error_notification
+= simple_form_for(@poll, url: root_path, 
+                         remote: true, 
+                         defaults: { label: false },
+                         html: { novalidate: 'novalidate', 
+                                 autocomplete: "off"       }) do |form|
   = form.input :question, placeholder: "Write your question here"
   = form.input :answers, as: :array
+  = form.input :allow_multiple, as: :boolean, label: "Allow multiple answers"
   = form.button :submit, "Create poll"
