--- a/app/views/polls/edit.html.haml
+++ b/app/views/polls/edit.html.haml
@@ -4,7 +4,13 @@
       %p.notice
         = notice
       .errors
-      = simple_form_for(@poll, url: update_path(@poll), remote: true, defaults: { label: false }) do |form|
+      = simple_form_for(@poll, url: update_path(@poll), 
+                               remote: true, 
+                               defaults: { label: false }) do |form|
         %h3= @poll.question
-        = form.input :answers, collection: @poll.answers, as: :radio_buttons
+        - if @poll.allow_multiple
+          = form.input :answers, collection: @poll.answers, as: :check_boxes,
+                                 checked: false
+        - else
+          = form.input :answers, collection: @poll.answers, as: :radio_buttons
         = form.button :submit, "Vote"
