Prevent voting multiple times

--- a/app/views/polls/_new.html.haml
+++ b/app/views/polls/_new.html.haml
@@ -3,7 +3,8 @@
                          defaults: { label: false },
                          html: { novalidate: 'novalidate', 
                                  autocomplete: "off"       }) do |form|
-  = form.input :question, placeholder: "Write your question here"
+  = form.input :question, placeholder: "write your question here"
   = form.input :answers, as: :array
   = form.input :allow_multiple, as: :boolean, label: "Allow multiple answers"
+  = form.input :allow_duplication, as: :boolean, label: "Allow duplication"
   = form.button :submit, "Create poll"
