--- a/app/views/polls/edit.html.haml
+++ b/app/views/polls/edit.html.haml
@@ -1,16 +1,3 @@
-.container
-  .row
-    .text-center
-      %p.notice
-        = notice
-      .errors
-      = simple_form_for(@poll, url: update_path(@poll), 
-                               remote: true, 
-                               defaults: { label: false }) do |form|
-        %h3= @poll.question
-        - if @poll.allow_multiple
-          = form.input :answers, collection: @poll.answers, as: :check_boxes,
-                                 checked: false
-        - else
-          = form.input :answers, collection: @poll.answers, as: :radio_buttons
-        = form.button :submit, "Vote"
+.form-container
+  .errors
+  = render 'polls/voting_form'
