--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,59 +3,61 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster|Varela+Round');
 
 /* colors */
+
 $dark-grey:   #3E3E3E;
 $dark-green:  #3DA035;
 $green:       #4CC641;
 $white:       #DDDDDD;
 $light-grey:  #adafad;
-$error-dark:  #F36026;
-$error-light: #FFd3d3;
+$error-font:  #F36026;
+$error-bgnd:  rgba(255, 211, 211, 0.5);
 
 body {
-  min-height: 100vh;
   background-color: $dark-grey;
-  font-family: 'Varela Round', sans-serif;
-  letter-spacing: 0.5px;
   color: $dark-grey;
+  font-family: 'Varela Round', sans-serif;
   font-size: 16px;
+  letter-spacing: 0.5px;
+  min-height: 100vh;
 }
+
+/* buttons */
 
 .btn.btn-default:active, .btn.btn-default:focus {
   background-color: $white;
-  color: $green;
   border-color: $green;
-  outline: none;
   box-shadow: none;
+  color: $green;
+  outline: none;
 }
 
 .green-btn, .clear-btn, .create-btn {
   background-color: $green;
-  font-weight: bold;
-  font-size: 16px;
-  color: $white;
-  padding: 10px 20px;
-  border-radius: 20px;
   border: 2px solid $green;
+  border-radius: 20px;
+  color: $white;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 10px 20px;
   &:hover {
     background-color: $white;
     border: 2px solid $green;
     color: $dark-green;
   }
   &:focus, &:active {
-    outline: none;
     background-color: $white;
-    color: $dark-green;
     border-color: $green;
+    color: $dark-green;
+    outline: none;
   }
-
 }
 
 .clear-btn, .create-btn {
-  padding: 6px 12px;
-  border-color: $light-grey;
   background-color: $white;
+  border-color: $light-grey;
   color: $light-grey;
   font-weight: normal;
+  padding: 6px 12px;
 }
 
 .create-btn {
@@ -63,9 +65,9 @@ body {
   border-color: $white;
   color: $white;
   &:hover {
+    background-color: $dark-grey;
     border-color: $green;
     color: $green;
-    background-color: $dark-grey;
   }
 }
 
@@ -73,82 +75,92 @@ input[type=submit] {
   margin-right: 50px;
 }
 
+/* errors */
+
+.errors ul {
+  background-color: $error-bgnd;
+  border: 1px solid $error-font;
+  border-radius: 10px;
+  color: $error-font;
+  font-style: italic;
+  list-style: none;
+  padding: 20px;
+  text-align: center;
+}
+
+/* header */
 
 #root {
   text-decoration: none;
 }
 
 #header {
-  margin-top: 60px;
   color: $green;
   font-family: 'Lobster', cursive;
+  margin-top: 60px;
 }
 
-.form-container, .results-container {
-  width: 70%;
-  background-color: $white;
-  padding: 20px 50px;
-  margin: 30px auto;
-  border-left: 10px solid $green;
-  min-width: 350px;
-}
-
+/* forms */
 
 .form-control {
   background-color: $white;
-  color: $dark-grey;
   border: 2px solid $light-grey;
-  box-shadow: none;
   border-radius: 10px;
-  height: 40px;
+  box-shadow: none;
+  color: $dark-grey;
   font-size: 16px;
-  margin-bottom: 5px;
+  height: 40px;
   letter-spacing: 1px;
+  margin-bottom: 5px;
   &:focus {
-    box-shadow: none;
     border-color: $green;
+    box-shadow: none;
   }
 }
 
 #poll_question {
-  height: 50px;
   font-size: 1.7rem;
   font-weight: bold;
+  height: 50px;
 }
 
-.errors {
-  ul {
-    border-radius: 10px;
-    text-align: center;
-    font-style: italic;
-    color: $error-dark;
-    padding: 20px;
-    border: 1px solid $error-dark;
-    list-style: none;
-    background-color: $error-light;
-  }
+/* main page */
+
+.form-container, .results-container {
+  background-color: $white;
+  border-left: 10px solid $green;
+  margin: 30px auto;
+  min-width: 350px;
+  padding: 20px 50px;
+  width: 70%;
 }
+
+/* edit and show view */
 
 #question {
+  border-bottom: 2px solid $green;
   font-size: 24px;
   font-style: italic;
-  text-align: center;
   padding-bottom: 10px;
-  border-bottom: 2px solid $green;
+  text-align: center;
 }
 
+/* edit view */
+
 .info {
+  background-color: $green;
   color: $white;
   font-size: 14px;
   font-weight: bold;
-  padding: 5px;
-  background-color: $green;
   margin-bottom: 20px;
+  padding: 5px;
 }
 
+/* show view */
+
 .answer {
-  margin-top: 25px;
   border-bottom: 1px dashed $light-grey;
+  margin-top: 25px;
   padding-bottom: 5px;
   .value{
     float: right;
@@ -160,8 +172,9 @@ input[type=submit] {
 }
 
 #total {
-  margin-top: 10px;
   color: $dark-green;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 span.percentage {
@@ -170,49 +183,52 @@ span.percentage {
 }
 
 .filled {
-  height: 25px;
   background-color: $green;
+  height: 25px;
 }
-
 
 /* checkboxes and radio buttons */
 
+/* hide defaults checkboxes and radio buttons */
 .checkbox input[type=checkbox], .radio input[type=radio] {
   opacity: 0;
 }
 
+/* edit and show view checkboxes */
 .checkbox, .radio {
-  padding-left: 30px;
-  margin-bottom: 25px;
   border-bottom: 1px dashed $light-grey;
+  margin-bottom: 25px;
   padding-bottom: 5px;
+  padding-left: 30px;
   label {
     padding-left: 0px;
   }
 }
 
+/* index view checkboxes */
 .options .checkbox {
   border: none;
   margin: 0;
   padding-bottom: 0;
 }
 
+/* create custom checkbox */
 .checkbox label::before, .radio label::before{
   content: "";
+  border: 2px solid $light-grey;
   display: inline-block;
   height: 20px;
   width: 20px;
-  border: 2px solid $light-grey;
 }
 
 .checkbox label::after, .radio label::after {
   content: "";
+  border-bottom: 4px solid $dark-green;
+  border-left: 4px solid $dark-green;
   display: inline-block;
   height: 10px;
-  width: 20px;
-  border-left: 4px solid $dark-green;
-  border-bottom: 4px solid $dark-green;
   transform: rotate(-45deg);
+  width: 20px;
 }
 
 .checkbox label, .radio label {
@@ -222,25 +238,25 @@ span.percentage {
 .radio label::before, .radio label::after {
   position: absolute;
 }
-/*Outer-box*/
+
 .checkbox label::before, .radio label::before {
   left: -30px;
-
 }
-/*Checkmark*/
+
 .checkbox label::after, .radio label::after {
   left: -27px;
 }
-  /*Hide the checkmark by default*/
+
 .checkbox input[type=checkbox] + label::after,
 .radio input[type=radio] + label::after {
   content: none;
 }
-/*Unhide the checkmark on the checked state*/
+
 .checkbox input[type=checkbox]:checked + label::after,
 .radio input[type=radio]:checked + label::after {
   content: "";
 }
+
 
 /* media */
 
