--- a/app/views/layouts/_default.html.haml
+++ b/app/views/layouts/_default.html.haml
@@ -1,4 +1,5 @@
 = csrf_meta_tags
 = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
 = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js'
 %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}
