--- a/app/views/polls/_last.html.haml
+++ b/app/views/polls/_last.html.haml
@@ -1,5 +1,3 @@
 - unless cookies[:last_link].nil?
   %a{href: cookies[:last_link]}
-    %p
-      Last poll:
-      = cookies[:last_question]
+    %button.dark-btn#last-poll My last poll
