--- a/app/views/polls/_new.html.haml
+++ b/app/views/polls/_new.html.haml
@@ -11,4 +11,4 @@
   .text-center
     = form.button :submit, "Create poll", class: "green-btn"
     %a{href: root_path}
-      %button.clear-btn Clear
+      %button.light-btn Clear
