--- a/app/views/polls/_voting_form.html.haml
+++ b/app/views/polls/_voting_form.html.haml
@@ -12,4 +12,4 @@
   .text-center
     = form.button :submit, "Vote", class: "green-btn"
     %a{href: results_path(@poll)}
-      %button.clear-btn See results
+      %button.light-btn See results
