--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %title Polls
     = render 'layouts/default'
   %body
+  = render 'cookies_eu/consent_banner', link: '/cookies', target: '_blank'    
   .container
     .row
       .text-center
